# oxideav-gsm

./: CHANGELOG.md  Cargo.toml  NOTICES  README.md
src/: arith.rs  bitreader.rs  bitstream.rs  codec.rs  comfort_noise.rs  confio.rs  decoder.rs  encoder.rs  error.rs  frame.rs  lib.rs  math.rs  sync.rs  synthesis.rs  tables.rs
tests/: blackbox_fixtures.rs  conformance_confio.rs  conformance_homing.rs  conformance_homing01.rs  conformance_seq04.rs  dtx_comfort_noise.rs  dtx_robustness.rs  encode_roundtrip.rs  encoder_robustness.rs  robustness_decode.rs  roundtrip_quality.rs
tests/fixtures/: README.md  blackbox_hostile.gsm  blackbox_hostile.msgsm  blackbox_loud.gsm  blackbox_loud.msgsm  blackbox_quiet.gsm  blackbox_quiet.msgsm  blackbox_rand.gsm  blackbox_rand.msgsm
