[package]
name = "oxideav-gsm"
version = "0.0.6"
edition = "2021"
rust-version = "1.80"
license = "MIT AND LicenseRef-libgsm"
authors = ["Mark Karpeles"]
description = "Pure-Rust GSM Full Rate (ETSI 06.10, RPE-LTP) speech codec — decoder + encoder + WAV-49 framing"
repository = "https://github.com/OxideAV/oxideav-gsm"
homepage = "https://github.com/OxideAV/oxideav-gsm"
readme = "README.md"
keywords = ["multimedia", "audio", "gsm", "telephony", "codec"]
categories = ["multimedia::encoding", "multimedia::audio"]

[dependencies]
oxideav-core = "0.1"
