[package]
name = "oxideav-gsm"
version = "0.0.7"
edition = "2021"
rust-version = "1.80"
license = "MIT AND LicenseRef-libgsm"
authors = ["Mark Karpeles"]
description = "Pure-Rust GSM Full Rate (ETSI 06.10, RPE-LTP) speech codec — decoder + encoder + WAV-49 framing"
repository = "https://github.com/OxideAV/oxideav-gsm"
homepage = "https://github.com/OxideAV/oxideav-gsm"
readme = "README.md"
keywords = ["multimedia", "audio", "gsm", "telephony", "codec"]
categories = ["multimedia::encoding", "multimedia::audio"]

[dependencies]
oxideav-core = "0.1"
# Distributed-slice auto-registration into `oxideav_core::REGISTRARS`
# via the `oxideav_core::register!` macro. Tiny crate, no transitive
# deps; works on every target including wasm.
linkme = "0.3"
